src/test/deca/codegen/valid/created/class/return_this.ass
	TSTO #11
	BOV pile_pleine
	ADDSP #11
; start main program
; Construction des tables des méthodes
; Construction de la table des méthodes de Object
	LOAD #null, R0
	STORE R0, 1(GB)
	LOAD code.Object.equals, R0
	STORE R0, 2(GB)
; Construction de la table des méthodes de A
	LEA 1(GB), R0
	STORE R0, 3(GB)
	LOAD code.Object.equals, R0
	STORE R0, 4(GB)
	LOAD code.A.getthis, R0
	STORE R0, 5(GB)
; Construction de la table des méthodes de B
	LEA 3(GB), R0
	STORE R0, 6(GB)
	LOAD code.Object.equals, R0
	STORE R0, 7(GB)
	LOAD code.A.getthis, R0
	STORE R0, 8(GB)
	LOAD code.B.getB, R0
	STORE R0, 9(GB)
; Main program
; new ligne 19
	NEW #2, R2
	BOV tas_plein
	LEA 3(GB), R0
	STORE R0, 0(R2)
	PUSH R2
	BSR init.A
	POP R2
	STORE R2, 10(GB)
; new ligne 20
	NEW #3, R2
	BOV tas_plein
	LEA 6(GB), R0
	STORE R0, 0(R2)
	PUSH R2
	BSR init.B
	POP R2
	STORE R2, 11(GB)
; Beginning of main instructions:
	WSTR "0="
	ADDSP #1
	LOAD 10(GB), R2
	STORE R2, 0(SP)
	LOAD 0(SP), R2
	CMP #null, R2
	BEQ dereferencement.null
	LOAD 0(R2), R2
	BSR 2(R2)
	SUBSP #1
	LOAD R0, R2
	CMP #null, R2
	BEQ dereferencement.null
	LOAD 1(R2), R2
	LOAD R2, R1
	WINT
	WNL
	WSTR "0="
	ADDSP #1
	LOAD 11(GB), R2
	STORE R2, 0(SP)
	LOAD 0(SP), R2
	CMP #null, R2
	BEQ dereferencement.null
	LOAD 0(R2), R2
	BSR 2(R2)
	SUBSP #1
	LOAD R0, R2
	CMP #null, R2
	BEQ dereferencement.null
	LOAD 1(R2), R2
	LOAD R2, R1
	WINT
	WNL
	WSTR "1="
	ADDSP #1
	LOAD 11(GB), R2
	STORE R2, 0(SP)
	LOAD 0(SP), R2
	CMP #null, R2
	BEQ dereferencement.null
	LOAD 0(R2), R2
	BSR 3(R2)
	SUBSP #1
	LOAD R0, R2
	CMP #null, R2
	BEQ dereferencement.null
	LOAD 2(R2), R2
	LOAD R2, R1
	WINT
	WNL
	HALT
; Classe Object
; ---------- Code de la méthode equals dans la classe Object (built in)
code.Object.equals:
	LOAD -2(LB), R1
	CMP 1(LB), R1
	BEQ Object.equals.true
	LOAD #0, R0
	BRA fin.Object.equals
Object.equals.true:
	LOAD #1, R0
fin.Object.equals:
	RTS
; Classe A
; ---------- Initialisation des champs de A
init.A:
	TSTO #1
	BOV pile_pleine
	PUSH R2
	LOAD -2(LB), R1
	LOAD #0, R0
	STORE R0, 1(R1)
	LOAD -2(LB), R1
	LOAD #0, R2
	STORE R2, 1(R1)
	POP R2
	RTS
; ---------- Code de la methode getthis dans la classe A ligne 9
code.A.getthis:
	TSTO #1
	BOV pile_pleine
; Sauvegarde des registres
	PUSH R2
	LOAD -2(LB), R2
	LOAD R2, R0
	BRA fin.A.getthis
	WSTR "Erreur : sortie de la méthode sans return"
	WNL
	ERROR
fin.A.getthis:
	POP R2
	RTS
; Classe B
; ---------- Initialisation des champs de B
init.B:
	TSTO #3
	BOV pile_pleine
	PUSH R2
	LOAD -2(LB), R1
	LOAD #0, R0
	STORE R0, 2(R1)
	PUSH R1
	BSR init.A
	SUBSP #1
	LOAD -2(LB), R1
	LOAD #1, R2
	STORE R2, 2(R1)
	POP R2
	RTS
; ---------- Code de la methode getB dans la classe B ligne 14
code.B.getB:
	TSTO #1
	BOV pile_pleine
; Sauvegarde des registres
	PUSH R2
	LOAD -2(LB), R2
	LOAD R2, R0
	BRA fin.B.getB
	WSTR "Erreur : sortie de la méthode sans return"
	WNL
	ERROR
fin.B.getB:
	POP R2
	RTS
; Erreurs
pile_pleine:
	WSTR "Erreur : pile_pleine"
	WNL
	ERROR
dereferencement.null:
	WSTR "Erreur : dereferencement.null"
	WNL
	ERROR
tas_plein:
	WSTR "Erreur : tas_plein"
	WNL
	ERROR
; end main program
